# Console-Bounce

./: .gitignore  CMakeLists.txt  main.cpp  math.hpp  render.hpp  solver.hpp
maps/: obstacles.txt  stage_1.txt  stage_1_obstacles.txt
